# revibe

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  debug_error_handling.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
homebrew/: revibe.rb
npm/: README.md  package.json
src/revibe/: __init__.py  __main__.py  analyzer.py  cli.py  constants.py  duplicates.py  fixer.py  metrics.py  patterns.py  report_html.py  report_json.py  report_terminal.py  scanner.py  smells.py
tests/: conftest.py  test_analyzer.py  test_cli.py  test_duplicates.py  test_fixer.py  test_metrics.py  test_priority_cli_verbose.py  test_priority_coverage.py  test_priority_duplicates_verbose.py  test_priority_fixer.py  test_priority_html.py  test_priority_metrics_verbose.py  test_priority_scanner_verbose.py  test_priority_terminal.py  test_reports.py  test_scanner.py  test_smells.py
